--- a/subjectscheme.ditamap
+++ b/subjectscheme.ditamap
@@ -6,10 +6,10 @@
         <subjectdef keys="admin"/>
         <subjectdef keys="IT"/>
     </subjectdef>
-    <subjectdef keys="platforms">
-        <subjectdef keys="Windows NT 4.0 server"/>
-        <subjectdef keys="Windows 2000 server"/>
-        <subjectdef keys="Windows server 2003"/>
+    <subjectdef keys="platform">
+        <subjectdef keys="Windows_NT_4.0" navtitle="Windows NT 4.0 server"/>
+        <subjectdef keys="Windows_2000" navtitle="Windows 2000 server"/>
+        <subjectdef keys="Windows_2003" navtitle="Windows server 2003"/>
     </subjectdef>
     <!-- Definis les attributs que je personnalise -->
     <enumerationdef>
